--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "anthropic>=0.75.0",
+    "google-generativeai>=0.8.6",
+    "openai>=2.14.0",
     "pandas>=2.3.3",
     "plotly>=6.5.0",
     "pydantic>=2.12.5",
